--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
     "next": "latest",
+    "qs": "^6.9.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^7.1.1",
@@ -32,6 +33,7 @@
     "@storybook/react": "^5.1.11",
     "@types/jest": "^24.0.18",
     "@types/node": "^11.13.9",
+    "@types/qs": "^6.5.3",
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^7.1.2",
@@ -40,7 +42,10 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-preset-react-app": "^9.0.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.9.0",
+    "jest-enzyme": "^7.1.1",
     "react-docgen-typescript-loader": "^3.2.0",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
