--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jest": "^24.9.0",
     "jest-enzyme": "^7.1.1",
     "react-docgen-typescript-loader": "^3.2.0",
+    "redux-devtools-extension": "^2.13.8",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "typescript": "3.5.2"
