--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "next start",
     "type-check": "tsc",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest",
+    "snapshot": "jest --updateSnapshot"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
@@ -31,14 +33,18 @@
     "@storybook/addons": "^5.1.11",
     "@storybook/preset-typescript": "^1.1.0",
     "@storybook/react": "^5.1.11",
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.18",
     "@types/node": "^11.13.9",
     "@types/qs": "^6.5.3",
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^7.1.2",
+    "@types/react-test-renderer": "^16.9.0",
     "@types/storybook__react": "^4.0.2",
     "@types/styled-components": "^4.1.18",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-preset-react-app": "^9.0.1",
@@ -47,6 +53,7 @@
     "jest": "^24.9.0",
     "jest-enzyme": "^7.1.1",
     "react-docgen-typescript-loader": "^3.2.0",
+    "react-test-renderer": "^16.9.0",
     "redux-devtools-extension": "^2.13.8",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
