--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
+    "delay-wrapper": "^0.0.3",
     "next": "latest",
     "qs": "^6.9.0",
     "react": "^16.7.0",
+    "react-dnd-cjs": "^9.4.0",
+    "react-dnd-html5-backend-cjs": "^9.4.0",
     "react-dom": "^16.7.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
