--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
     "delay-wrapper": "^0.0.3",
+    "dnd-core": "^9.4.0",
     "next": "latest",
     "qs": "^6.9.0",
     "react": "^16.7.0",
