--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "delay-wrapper": "^0.0.3",
     "dnd-core": "^9.4.0",
     "next": "latest",
+    "node-emoji": "^1.10.0",
     "qs": "^6.9.0",
     "react": "^16.7.0",
     "react-dnd-cjs": "^9.4.0",
@@ -41,6 +42,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.18",
     "@types/node": "^11.13.9",
+    "@types/node-emoji": "^1.8.1",
     "@types/qs": "^6.5.3",
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.0.11",
