--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
+    "dayjs": "^1.8.16",
     "delay-wrapper": "^0.0.3",
     "dnd-core": "^9.4.0",
     "next": "latest",
