--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
     "snapshot": "jest --updateSnapshot"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
     "axios": "^0.19.0",
+    "cross-fetch": "^3.0.4",
     "dayjs": "^1.8.16",
     "delay-wrapper": "^0.0.3",
     "dnd-core": "^9.4.0",
-    "next": "latest",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
+    "next": "^9.1.7",
     "node-emoji": "^1.10.0",
     "qs": "^6.9.0",
     "react": "^16.7.0",
