--- a/package.json
+++ b/package.json
@@ -5,34 +5,47 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "lint-functions": "tslint --project functions",
+    "build-public": "cpx \"src/public/**/*.*\" \"dist/public\" -C",
+    "build-functions": "tsc --project functions",
+    "copy-deps": "cpx \"*{package.json,package-lock.json,yarn.lock}\" \"dist/functions\" -C",
+    "install-deps": "cd \"dist/functions\" && npm i",
     "type-check": "tsc",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "jest",
-    "snapshot": "jest --updateSnapshot"
+    "snapshot": "jest --updateSnapshot",
+    "deploy:functions": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
+  },
+  "engines": {
+    "node": "13.6.0"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.22",
-    "@fortawesome/free-solid-svg-icons": "^5.10.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
-    "axios": "^0.19.0",
+    "axios": "^0.19.1",
+    "cpx": "^1.5.0",
     "cross-fetch": "^3.0.4",
-    "dayjs": "^1.8.16",
+    "dayjs": "^1.8.19",
     "delay-wrapper": "^0.0.3",
     "dnd-core": "^9.4.0",
+    "firebase-admin": "^8.9.0",
+    "firebase-functions": "^3.3.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "next": "^9.1.7",
     "node-emoji": "^1.10.0",
-    "qs": "^6.9.0",
-    "react": "^16.7.0",
+    "qs": "^6.9.1",
+    "react": "^16.12.0",
     "react-dnd-cjs": "^9.4.0",
     "react-dnd-html5-backend-cjs": "^9.4.0",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.12.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "styled-components": "^4.3.2"
@@ -70,8 +83,10 @@
     "react-test-renderer": "^16.9.0",
     "redux-devtools-extension": "^2.13.8",
     "ts-jest": "^24.0.2",
+    "ts-lint": "^4.5.1",
     "ts-loader": "^6.0.4",
-    "typescript": "3.5.2"
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.4"
   },
   "license": "ISC"
 }
