--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "firebase-functions": "^3.3.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "micro-cors": "^0.1.1",
     "next": "^9.1.7",
     "node-emoji": "^1.10.0",
     "qs": "^6.9.1",
@@ -60,6 +61,7 @@
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.18",
+    "@types/micro-cors": "^0.1.0",
     "@types/node": "^11.13.9",
     "@types/node-emoji": "^1.8.1",
     "@types/qs": "^6.5.3",
