--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint-functions": "tslint --project functions",
     "build-public": "cpx \"src/public/**/*.*\" \"dist/public\" -C",
     "build-functions": "tsc --project functions",
@@ -15,6 +16,7 @@
     "build-storybook": "build-storybook",
     "test": "jest",
     "snapshot": "jest --updateSnapshot",
+    "deploy": "firebase deploy --only hosting",
     "deploy:functions": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -36,6 +38,7 @@
     "delay-wrapper": "^0.0.3",
     "dnd-core": "^9.4.0",
     "firebase-admin": "^8.9.0",
+    "firebase-auth": "^0.1.2",
     "firebase-functions": "^3.3.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
@@ -60,6 +63,7 @@
     "@storybook/react": "^5.1.11",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^24.0.18",
     "@types/micro-cors": "^0.1.0",
     "@types/node": "^11.13.9",
@@ -72,6 +76,7 @@
     "@types/storybook__react": "^4.0.2",
     "@types/styled-components": "^4.1.18",
     "babel-jest": "^24.9.0",
+    "dotenv": "^8.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.9.0",
@@ -82,7 +87,8 @@
     "ts-jest": "^24.0.2",
     "ts-lint": "^4.5.1",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "webpack": "^4.42.0"
   },
   "license": "ISC"
 }
