--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "rimraf .next && next build",
     "start": "next start",
     "export": "next export",
     "lint-functions": "tslint --project functions",
@@ -35,8 +35,8 @@
     "dayjs": "^1.8.19",
     "delay-wrapper": "^0.0.3",
     "dnd-core": "^9.4.0",
-    "firebase-admin": "^8.9.0",
-    "firebase-auth": "^0.1.2",
+    "firebase": "^7.11.0",
+    "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.3.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
@@ -73,6 +73,7 @@
     "react-docgen-typescript-loader": "^3.2.0",
     "react-test-renderer": "^16.9.0",
     "redux-devtools-extension": "^2.13.8",
+    "rimraf": "^3.0.2",
     "ts-jest": "^24.0.2",
     "ts-lint": "^4.5.1",
     "tslint": "^5.20.1",
